--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey:test3
-sonar.projectName=resumeTrial-master
+sonar.projectKey:test4
+sonar.projectName=likith
 sonar.projectVersion=1.0
 sonar.javascript.file.suffixes=.js,.jsx
-sonar.sources=resumeTrial-master/views/
+sonar.sources=/
 sonar.sourceEncoding=UTF-8
