--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey:test4
 sonar.projectName=likith
 sonar.projectVersion=1.0
 sonar.javascript.file.suffixes=.js,.jsx
-sonar.sources=/
+sonar.sources=views/
 sonar.sourceEncoding=UTF-8
