--- a/.travis.yml
+++ b/.travis.yml
@@ -6,48 +6,48 @@ language: generic
  # - "stable"
 addons:
   sonarcloud:
-    organization: "likithjoel-github"
+    organization: "tanujamedisetti87-github"
     token:
-      secure: "1beb1875ba73d127b45082bf0359ee407bee220b"
+      secure: "c31adcd738465686855224f7f9b30c8ec5008271"
   #sauce_connect:
-    #username: "likithjoel"
-    #access_key: "15bcd862-615a-4775-ba98-feeab15399cc"
+   # username: "TanujaMedisetti87"
+   # access_key: "130dda79-1dea-45cd-849c-24cfbe048884"
     
 script:
   - sonar-scanner
   
+
 before_deploy:
   - cd ..
-  - zip -r logan2.zip *
+  - zip -r mahesh1 *
   - mkdir -p "dpl_cd_upload"
-  - mv logan2.zip dpl_cd_upload/logan2.zip || true
-  
-  
+  - mv mahesh1.zip dpl_cd_upload/mahesh1.zip || true
+
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
     secret_access_key: $AWS_SECRET_KEY
     local_dir: dpl_cd_upload
-    bucket: travis-resume
+    bucket: tanuja123
     region: us-east-1
     skip_cleanup: true
     acl: public_read
     detect_encoding: true
     on:
-      repo: Likithjoel/test4
+      repo:  TanujaMedisetti87/test4
       all_branches: true
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
     secret_access_key: $AWS_SECRET_KEY
-    bucket: travis-resume
-    key: logan2.zip
+    bucket: tanuja123
+    key: mahesh1.zip
     bundle_type: zip
     application: TestApplication
     deployment_group: TestApplication
     region: us-east-1
     on:
-      repo: Likithjoel/test4
+      repo: TanujaMedisetti87/test4
       all_branches: true
 after_deploy:
-  - echo "Performing after deploy procedures..."  
-  - unzip logan2.zip
+  - echo "Performing after deploy procedures..."
+  - unzip mahesh1.zip
