--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey:test4
-sonar.projectName=likith
+sonar.projectName=logan
 sonar.projectVersion=1.0
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.sources=views/
